2004-08-31  Derek Price <derek@ximbiot.com>

	* checkout.c: Reformat function headers.  Remove unnecessary typecasts
	and prototypes.  Some other reformatting for legibility.

2004-08-31  Derek Price <derek@ximbiot.com>

	* buffer.c: Gratuitous reformatting of header comments.
	s/abort/assert/.  Remove unnecessary typecasts.
	* buffer.h: Remove unnecessary "extern" decls.  Some reformatting.

2004-08-24  Derek Price <derek@ximbiot.com>

	* recurse.c (start_recursion): Don't shorten //. to / (use //).

2004-08-24  Derek Price <derek@ximbiot.com>

	* recurse.c (start_recursion): Strip trailing CWD indirections on
	repository.
	* sanity.sh (rstar-toplevel): Update to account for new behavior.
	(Report from Dan Peterson <dbpete@aol.com>.)

2004-08-24  Mark D. Baushke  <mdb@cvshome.org>

	* recurse.c (do_recursion): Correct test for calling
	server_pause_check to occur when locktype != CVS_LOCK_WRITE.
	(Patch suggested by Ian Lance Taylor <ian@wasabisystems.com>
	in bug#198).

2004-08-24  Derek Price <derek@ximbiot.com>

	* sanity.sh: Update a few tests to account for the recent error message
	changes.

2004-08-24  Derek Price <derek@ximbiot.com>

	* rcs.c (RCS_valid_rev): Declare arg const.
	* rcs.h: Likewise.

2004-08-24  Derek Price <derek@ximbiot.com>

	* rcs.c (translate_symtag): Prevent infinite loop.
	* tag.c (tag_check_valid): Check tag syntax before searching for tags.
	* sanity.sh (tag-space): Some tests for the above.
	(Report from Dan Peterson <dbpete@aol.com>.)

2004-08-24  Derek Price <derek@ximbiot.com>

	* tag.c (tag_check_valid): Use RCS_valid_rev() rather than duplicating
	code.  Misc error message improvements.  

2004-08-24  Mark D. Baushke  <mdb@cvshome.org>

	* ignore.c (ignore_directory): Include the terminating NUL
	character in the directory name comparison to avoid matching
	substrings of directories by accident.
	(Report and suggested fix from James E Wilson
	<wilson@specifixinc.com>.)