@@ -1179,7 +1179,7 @@ precommit_proc (const char *repository, const char *filter, void *closure)
 
     cmdline = format_cmdline (
 #ifdef SUPPORT_OLD_INFO_FMT_STRINGS
-        0, srepos,
+        false, srepos,
 #endif /* SUPPORT_OLD_INFO_FMT_STRINGS */
         filter,
         "p", "s", srepos,
