@@ -512,7 +512,7 @@ postwatch_proc (const char *repository, const char *filter, void *closure)
      */
     cmdline = format_cmdline (
 #ifdef SUPPORT_OLD_INFO_FMT_STRINGS
-	                      0, srepos,
+	                      false, srepos,
 #endif /* SUPPORT_OLD_INFO_FMT_STRINGS */
 	                      filter,
 	                      "c", "s", cvs_cmd_name,
